tests/purs/failing/OrphanUnnamedInstance.out
Error found:
in module [33mTest[0m
at tests/purs/failing/OrphanUnnamedInstance.purs:6:1 - 7:11 (line 6, column 1 - line 7, column 11)

  Orphan instance found for
  [33m                 [0m
  [33m  Class.C Boolean[0m
  [33m                 [0m
  This problem can be resolved by declaring the instance in [33mClass[0m, or by defining the instance on a newtype wrapper.

in type class instance
[33m                 [0m
[33m  Class.C Boolean[0m
[33m                 [0m

See https://github.com/purescript/documentation/blob/master/errors/OrphanInstance.md for more information,
or to contribute content related to this error.

